# api-to-cli-skillset

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PRD.md  README.md  openapi.yaml  prompts.md  pyproject.toml
.claude/commands/: ama.md
docs/: API_STANDARDS_COMPARISON.md  API_STANDARDS_COMPARISON_v2.md  APIs_Directory.md  PRD_QA.md  options.md
example_APIs/: README.md  TRONSCAN_DISCOVERY.md  courtlistener-api.yaml  spoonacular-api-input.json  spoonacular-api.yaml  stripe-api-v1-codex.yaml  stripe-api.json  tronscan-api-enhanced.yaml  tronscan-api.yaml
example_APIs/arkm-intel-api-v1/: openapi.yaml
example_APIs/open-meteo/: api_info.json  api_info_enriched.json  openapi.yaml
example_APIs/open-meteo-flood-v1/: openapi.yaml
example_APIs/open-meteo-v2/: openapi.yaml
example_CLIs/arkm-cli-v1/: .env.example  Makefile  pyproject.toml
example_CLIs/arkm-cli-v1/src/: cli.py  client.py  logger.py  output.py
example_CLIs/arkm-cli-v1/src/commands/: arkm_commands.py  balances_commands.py  chains_commands.py  cluster_commands.py  counterparties_commands.py  flow_commands.py  history_commands.py  intelligence_commands.py  loans_commands.py  marketdata_commands.py  networks_commands.py  portfolio_commands.py  swaps_commands.py  tag_commands.py  token_commands.py  transfers_commands.py  tx_commands.py  user_commands.py  volume_commands.py  ws_commands.py
example_CLIs/arkm-cli-v1/tests/: test_cli.py
example_CLIs/open-meteo-cli-v3/: .env.example  Makefile  pyproject.toml  requirements.txt
example_CLIs/open-meteo-cli-v3/src/: batch_processor.py  cli.py  client.py  logger.py
example_CLIs/open-meteo-cli-v3/src/commands/: airquality_commands.py  archive_commands.py  bom_commands.py  climate_commands.py  cma_commands.py  dmi_commands.py  dwdicon_commands.py  ecmwf_commands.py  elevation_commands.py  ensemble_commands.py  flood_commands.py  forecast_commands.py  gem_commands.py  gfs_commands.py  jma_commands.py  knmi_commands.py  marine_commands.py  meteofrance_commands.py  method_commands.py  metno_commands.py  overview_commands.py  purpose_commands.py  requirements_commands.py  search_commands.py  setup_commands.py  strategy_commands.py  verify_commands.py
example_CLIs/open-meteo-cli-v3/tests/: test_cli.py
example_CLIs/tronscan-cli2/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
example_CLIs/tronscan-cli2/data/: batch.txt
example_CLIs/tronscan-cli2/src/: __init__.py  batch_processor.py  cli.py  client.py  config.py  logger.py  output.py
example_CLIs/tronscan-cli2/src/commands/: __init__.py  accounts_commands.py  blocks_commands.py  contracts_commands.py
example_CLIs/tronscan-cli2/tests/: __init__.py  test_cli.py
example_PRDs/: PRD.md  arkham_intel_api_PRD.md  courtlistener-prd.md  open-meteo-prd.v1.md  open-meteo-prd.v2..md  open-meteo-prd.v3.md  spoonacular_food_api_PRD.md  tronscan-prd.md
(+147 files in other folders)
