[project]
name = "open-meteo-cli-v3"
version = "0.1.0"
description = "open-meteo Python Client - Product Requirements Document"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
    "pandas>=1.3.0",
    "openpyxl>=3.1.2"
]

[project.scripts]
open-meteo-cli-v3 = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
